# dsa

BigNumber/: BigNumber.cpp  BigNumber.h
heap sort/: heap.cpp  heap.h
homework1/: 1.cpp  10.cpp  11.cpp  13.cpp  16.cpp  18.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
homework2/: 12.cpp  13.cpp  14.cpp
homework3/: 1.cpp  2.cpp  5.cpp  6.cpp  7.cpp
homework4/: 2.cpp
homework5/: 12.cpp  8.cpp
homework6/: 11.cpp  7.cpp
homework7/: 1.cpp  10.cpp  2.cpp  3.cpp  5.cpp  9.cpp
huffman/: huffman.cpp  huffman.h  main.cpp  queue.cpp  queue.h
infix to prefix and postfix/: CMakeLists.txt  main.cpp
